--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.10.4",
+    "@tarekraafat/autocomplete.js": "^8.3.2",
     "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
